fixed floating logout and console button on mobile

--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,10 @@
  * Last modified: 2023-04-25
 */
 
+:root {
+    --menubackground: <?=$ThemeEngine['menubackground']?>
+}
+
 @media (max-width: 1260px) {
     p {
         text-align: left;
@@ -155,6 +159,7 @@
         height: 130px;
     }
     #nav-block {
+        background: var(--menubackground) !important;
         letter-spacing: 0;
     }
     table.share_status.dashboard td i[class^="icon-"] {
